--- a/src/app/viewer/viewer.component.css
+++ b/src/app/viewer/viewer.component.css
@@ -2,6 +2,12 @@
   background-color: black;
 }
 
+.draggable {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .main img {
   width: 100%;
   height: 100%;
@@ -11,4 +17,12 @@
 .sidebar h1 {
   padding-top: 10px;
   word-wrap: break-word;
+}
+
+.map {
+  position: fixed;
+  width: 200px;
+  height: 200px;
+  bottom: 0;
+  left: 0;
 }
